<resources>
    <string name="app_name">TaskMagic</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enterAmount">Please enter an amount:</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="date">date</string>
    <string name="title_activity_maps">Map</string>
    <string name="placeholder">Placeholder</string>
    <string name="date_hint">Finish By</string>
    <string name="post_task">Post Task</string>
    <string name="set_location">Set Location</string>
    <string name="task_description_hint">Task Description</string>
    <string name="task_title_hint">Task Title</string>
    <string name="create_task_title">ADD TASK</string>
    <string name="camera_button_desc">open camera</string>
    <string name="gallery_button_desc">open gallery</string>
</resources>
