<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerHorizontal="true"
    android:layout_width="320dp"
    android:layout_height="480dp">
    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorBlack"
        android:text="@string/title" />

    <TextView
        android:id="@+id/textView_titleContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_title"
        android:layout_alignStart="@+id/textView_title"
        android:layout_below="@+id/textView_title"
        android:textSize="25sp"
        android:textColor="@color/colorBlack"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_titleContent"
        android:layout_alignStart="@+id/textView_titleContent"
        android:layout_below="@+id/textView_titleContent"
        android:layout_marginTop="20dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textView_descriptionContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_description"
        android:layout_alignStart="@+id/textView_description"
        android:layout_below="@+id/textView_description"
        android:textSize="20sp"
        android:text="TextView" />

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_descriptionContent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="$" />

    <TextView
        android:id="@+id/textView_enterAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_amount"
        android:layout_alignLeft="@+id/editText_amount"
        android:layout_alignStart="@+id/editText_amount"
        android:layout_marginBottom="44dp"
        android:text="@string/enterAmount" />
    <LinearLayout
        android:id="@id/btnLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/cancel"
            android:textColor="@color/colorRed"/>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/confirm" />
    </LinearLayout>

</RelativeLayout>