<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/secondcolor"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorWhite"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editText_titleContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_below="@+id/textView_title"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/editText_titleContent"
        android:text="@string/description" />

    <Button
        android:id="@+id/editLocation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/editText_descriptionContent"
        android:background="@drawable/white_rounded_button"
        android:text="Edit Location" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editLocation_button"
        android:text="@string/date" />

    <TextView
        android:id="@+id/editText_dateContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:paddingLeft="4dp"
        android:textSize="20sp"
        android:layout_below="@+id/textView_date"
        android:text="@string/date_hint" />

    <EditText
        android:id="@+id/editText_descriptionContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_below="@+id/textView_description"
        android:text="TextView" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/edit_photo_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_dateContent"
        android:layout_marginTop="8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/edit_display_recycler"
            android:layout_width="320dp"
            android:layout_height="132dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_camera_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/edit_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/wallet_holo_blue_light"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/edit_gallery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/edit_camera_button"
            android:backgroundTint="@color/wallet_holo_blue_light"
            app:srcCompat="@android:drawable/ic_menu_gallery" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/edit_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView_description"
        android:background="@drawable/white_rounded_button"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/edit_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_confirm_button"
        android:layout_alignBottom="@+id/edit_confirm_button"
        android:background="@drawable/white_rounded_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="77dp"
        android:text="@string/cancel" />



</RelativeLayout>